--- a/spring/01-todo-webapp/build.gradle
+++ b/spring/01-todo-webapp/build.gradle
@@ -25,11 +25,18 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:2.0.0'
+	implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:2.0.0'
+	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:10.1.13'
 	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	implementation 'jakarta.servlet:jakarta.servlet-api:4.0.4'
+
+	implementation 'org.webjars:bootstrap:5.3.2'
+	implementation 'org.webjars:webjars-locator-core:0.52'
 }
 
 tasks.named('test') {
