--- a/spring/01-todo-webapp/build.gradle
+++ b/spring/01-todo-webapp/build.gradle
@@ -26,17 +26,24 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
-	implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:2.0.0'
-	implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:2.0.0'
-	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:10.1.13'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:10.1.13'
+	implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:2.0.0'
+	implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:2.0.0'
 	implementation 'jakarta.servlet:jakarta.servlet-api:4.0.4'
 
 	implementation 'org.webjars:bootstrap:5.3.2'
 	implementation 'org.webjars:webjars-locator-core:0.52'
+
+	implementation 'org.webjars:bootstrap-datepicker:1.9.0'
+
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
 
 tasks.named('test') {
