--- a/spring/01-todo-webapp/src/main/resources/application.yml
+++ b/spring/01-todo-webapp/src/main/resources/application.yml
@@ -5,3 +5,26 @@ spring:
       suffix: .jsp
     format:
       date: yyyy-MM-dd
+
+#  datasource:
+#    url: jdbc:h2:mem:testdb
+#    driver-class-name: org.h2.Driver
+#    username: lee
+#    password: 1234
+#  jpa:
+#    database-platform: org.hibernate.dialect.H2Dialect
+#  h2:
+#    console:
+#      enabled: true
+
+  datasource:
+    url: jdbc:mysql://localhost:3306/todo
+    username: root
+    password: 1234
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
