--- a/spring/02-rest-api/src/main/resources/application.yml
+++ b/spring/02-rest-api/src/main/resources/application.yml
@@ -1,1 +1,16 @@
-spring.application.name=rest
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/rest
+    username: root
+    password: 1234
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
+    defer-datasource-initialization: true
+  sql:
+    init:
+      mode: always
