chore: configure actuator endpoints

--- a/spring/02-rest-api/src/main/resources/application.yml
+++ b/spring/02-rest-api/src/main/resources/application.yml
@@ -20,3 +20,9 @@ springdoc:
     path: /api-docs
   swagger-ui:
     path: /swagger-ui
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "health, info"
