--- a/spring/02-rest-api/build.gradle
+++ b/spring/02-rest-api/build.gradle
@@ -41,6 +41,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.3'
+
+	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
+
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	testImplementation 'org.springframework.security:spring-security-test'
 }
 
 tasks.named('test') {
