chore: add comments sql init mode

--- a/spring/rest-api/src/main/resources/application.yml
+++ b/spring/rest-api/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     defer-datasource-initialization: true
   sql:
     init:
-      mode: never
+      mode: never # 개발 환경에서는 always, 운영 환경에서는 never
 
 springdoc:
   api-docs:
