--- a/react/todo-app/package.json
+++ b/react/todo-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "clsx": "^2.1.1",
     "cra-template": "1.2.0",
     "formik": "^2.4.6",
     "moment": "^2.30.1",
